# rua

./: .gitignore  Cargo.toml  README.md  bacon.toml  benchmarks.md  rustfmt.toml
.github/workflows/: rust.yml
benches/: eval_bench.rs  lex_bench.rs  parser_bench.rs
lib/func_macros/: Cargo.toml
lib/func_macros/src/: lib.rs
lib/identifiers/: Cargo.toml
lib/identifiers/src/: lib.rs
lib/struct-invariant/: Cargo.toml
lib/struct-invariant/src/: lib.rs
lib/struct-invariant/tests/: test.rs
lib/trie/: Cargo.toml
lib/trie/src/: lib.rs
scripts/: bench_flame.sh  compare.sh  compare_langs.sh  flame.sh
src/: cli.rs  compiler.rs  eval.rs  lex.rs  lib.rs  main.rs  repl.rs  wasm.rs
src/compiler/: bytecode.rs  expr.rs  fold.rs  locals.rs  mod.rs  tests.rs  upvalues.rs  utils.rs
src/eval/: call_frame.rs  exprs.rs  isolate.rs  macros.rs  mod.rs  native_functions.rs  return_result.rs  scope.rs  statements.rs  tests.rs  vals.rs  weak_interner.rs
src/eval/native_functions/: coroutine.rs  io.rs  math.rs  table.rs
src/eval/vals/: closure.rs  coroutine.rs  function.rs  mod.rs  number.rs  string.rs  table.rs
src/identifiers/: mod.rs
src/lex/: chars.rs  mod.rs  tests.rs  tokens.rs  utils.rs
src/parser/: ast.rs  mod.rs  tests.rs  utils.rs
src/repl/: mod.rs
test_scripts/: ack.js  ack.lua  ack.py  bintrees.js  bintrees.lua  bintrees.py  fact.js  fact.lua  fact.py  fact_tail.lua  fib.js  fib.lua  fib.py  fib_rec.js  fib_rec.lua  fib_rec.py  fizzbuzz.lua  for_loop.js  for_loop.lua  for_loop.py  insert_bwd.js  insert_bwd.lua  insert_bwd.py  insert_fwd.js  insert_fwd.lua  insert_fwd.py  loop.js  loop.lua  loop.py  merge_sort.lua  nbody.js  nbody.lua  nbody.py  stress_gc.js  stress_gc.lua  stress_gc.py  stress_rc.js  stress_rc.lua  stress_rc.py  table_insert.js  (+2 more)
tests/: lex_tests.rs  parse_tests.rs
