[workspace]
resolver = "2"
members = [
    "lib/func_macros",
    "lib/identifiers",
]

[package]
name = "rua"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
pretty_assertions = "1.4.0"

[dependencies]
regex-lite = "0.1.5"
rustc-hash = "1.1.0"
thiserror = "1.0.49"
rua_func_macros = { path = "./lib/func_macros" }
rua_identifiers = { path = "./lib/identifiers" }
once_cell = "1.18.0"
weak-table = "0.3.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 3

[profile.bench]
debug = true

[[bench]]
name = "lex_bench"
harness = false

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "eval_bench"
harness = false

