[workspace]
resolver = "2"
members = [
    "lib/func_macros",
    "lib/trie",
    "lib/struct-invariant",
]

[package]
name = "rua"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
pretty_assertions = "1.4.0"

[dependencies]
rustc-hash = "1.1.0"
thiserror = "1.0.49"
rua_func_macros = { path = "./lib/func_macros" }
rua_trie = { path = "./lib/trie" }
struct-invariant = { path = "./lib/struct-invariant" }
weak-table = "0.3.2"
either = "1.9.0"
static_assertions = "1.1.0"
clap = { version = "4.4.8", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 3

[profile.bench]
debug = true

[[bench]]
name = "lex_bench"
harness = false

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "eval_bench"
harness = false

