[workspace]
resolver = "2"
members = [
    "lib/func_macros",
    "lib/trie",
    "lib/struct-invariant",
]

[package]
name = "rua"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
pretty_assertions = "1.4.0"

[dependencies]
thiserror = "1.0.49"
rua_func_macros = { path = "./lib/func_macros" }
rua_trie = { path = "./lib/trie" }
struct-invariant = { path = "./lib/struct-invariant" }
static_assertions = "1.1.0"
clap = { version = "4.4.8", features = ["derive"] }
ahash = { version = "0.8.7", default-features = false, features = ["compile-time-rng", "std"] }
nohash-hasher = "0.2.0"
wasm-bindgen = "0.2.92"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mimalloc = "0.1.39"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true

[[bench]]
name = "lex_bench"
harness = false

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "eval_bench"
harness = false

